Add missing headers

--- a/figures/Figure3.ipynb
+++ b/figures/Figure3.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Figure 3 - Ye et al. 2023"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- import dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -16,6 +32,14 @@
     "from sklearn.decomposition import FastICA\n",
     "\n",
     "sns.set_style('ticks')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Display box plots of (un)supported rearing F1 scores "
    ]
   },
   {
@@ -60,6 +84,14 @@
     "    plt.ylabel('F1 score')\n",
     "    \n",
     "plot_figure3d()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualize SuperAnimal and Sturman latent spaces with CEBRA"
    ]
   },
   {
@@ -119,6 +151,14 @@
     "    )\n",
     "\n",
     "plot_figure3e()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Compute matrices of correlation between SuperAnimal's and human annotators' rear count"
    ]
   },
   {
