Update and rename Figure1.ipynb to ExtendedData_Figure1.ipynb

--- a/figures/ExtendedData_Figure1.ipynb
+++ b/figures/ExtendedData_Figure1.ipynb
@@ -5,7 +5,7 @@
    "id": "a0209a89",
    "metadata": {},
    "source": [
-    "# Figure 1 - Ye et al. 2023"
+    "# Extended Data Figure 1 - Ye et al. 2023"
    ]
   },
   {
