Added filtered version gait analysis to ED8 notebook

--- a/figures/Extended_Figure8.ipynb
+++ b/figures/Extended_Figure8.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "3b0fff60",
    "metadata": {},
    "outputs": [],
@@ -22,6 +22,13 @@
     "import matplotlib.image as mpimg\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
+    "from ruamel.yaml import YAML\n",
+    "from matplotlib.collections import LineCollection\n",
+    "from matplotlib.colors import ListedColormap\n",
+    "from ruamel.yaml import YAML\n",
+    "from scipy import signal\n",
+    "from sklearn.decomposition import FastICA\n",
+    "\n",
     "import pandas as pd\n",
     "import json\n",
     "plt.rcParams['axes.labelsize'] = 17  # for x and y labels\n",
@@ -411,8 +418,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3c996d1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mcolors' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 145>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    142\u001b[0m stances_gt \u001b[38;5;241m=\u001b[39m get_stances(contacts_gt, lifts_gt)\n\u001b[1;32m    144\u001b[0m s, e \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m35\u001b[39m, \u001b[38;5;241m35\u001b[39m\n\u001b[0;32m--> 145\u001b[0m coll_gt, segs_gt \u001b[38;5;241m=\u001b[39m \u001b[43m_make_line_collection\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcoords_gt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstances_gt\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlinks_front_limb_gt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstart\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mend\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43me\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolor_stance\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mk\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    146\u001b[0m coll_gt2, segs_gt2 \u001b[38;5;241m=\u001b[39m _make_line_collection(coords_gt, stances_gt[\u001b[38;5;241m1\u001b[39m], links_hind_limb_gt, start\u001b[38;5;241m=\u001b[39ms, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39me, color_stance\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mk\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    147\u001b[0m fig, axes \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39msubplots(nrows\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m, sharex\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, sharey\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "Input \u001b[0;32mIn [5]\u001b[0m, in \u001b[0;36m_make_line_collection\u001b[0;34m(coords, inds_stance, links, start, end, color_stance, alpha)\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m inds \u001b[38;5;129;01min\u001b[39;00m inds_stance:\n\u001b[1;32m     62\u001b[0m     mask_stance[inds[\u001b[38;5;241m0\u001b[39m]:inds[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m---> 63\u001b[0m color \u001b[38;5;241m=\u001b[39m \u001b[43mmcolors\u001b[49m\u001b[38;5;241m.\u001b[39mto_rgb(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     64\u001b[0m colors \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([color] \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mlen\u001b[39m(coords))\n\u001b[1;32m     65\u001b[0m colors[mask_stance] \u001b[38;5;241m=\u001b[39m mcolors\u001b[38;5;241m.\u001b[39mto_rgb(color_stance)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'mcolors' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def load_json(json_file):\n",
+    "    with open(json_file) as f:\n",
+    "        data = json.load(f)\n",
+    "    coords = np.full((max(map(int, data)) + 1, len(keypoints), 3), np.nan)\n",
+    "    for ind, list_ in data.items():\n",
+    "        if not list_:\n",
+    "            continue\n",
+    "        coords[int(ind)] = np.array(list_[0]['keypoints'])\n",
+    "    mi = pd.MultiIndex.from_product([['Byron'], keypoints, ['x', 'y']], names=['scorer', 'bodyparts', 'coords'])\n",
+    "    df = pd.DataFrame(\n",
+    "        coords[..., :2].reshape((coords.shape[0], -1)),\n",
+    "        columns=mi\n",
+    "    )\n",
+    "    return df, coords\n",
+    "\n",
+    "def get_events(df, event, hoof_kpt_names, ref_kpt_name, min_dist=50, detrend=True):\n",
+    "    keypoints = list(df.columns.get_level_values('bodyparts').unique())\n",
+    "    coords = df.copy().to_numpy().reshape((df.shape[0], -1, 2))\n",
+    "    # Center data\n",
+    "    if ref_kpt_name:\n",
+    "        temp = coords[:, keypoints.index(ref_kpt_name), :2]\n",
+    "        # Evaluate the animal's horizontal displacement when\n",
+    "        # the reference point is unseen.\n",
+    "        t = np.arange(coords.shape[0])\n",
+    "        mask = ~np.isnan(temp).any(axis=1)\n",
+    "        temp[:, 0] = np.poly1d(np.polyfit(np.flatnonzero(mask), temp[mask, 0], 1))(t)\n",
+    "        temp[:, 1] = np.poly1d(np.polyfit(np.flatnonzero(mask), temp[mask, 1], 1))(t)\n",
+    "        coords[..., :2] -= temp[:, None]\n",
+    "    events = []\n",
+    "    for pt in hoof_kpt_names:\n",
+    "        x = coords[:, keypoints.index(pt), 0]\n",
+    "        if event == 'lift':\n",
+    "            x = -x\n",
+    "        if detrend:\n",
+    "            signal.detrend(x[~np.isnan(x)], overwrite_data=True)\n",
+    "        events.append(signal.find_peaks(\n",
+    "            x,\n",
+    "            distance=min_dist,\n",
+    "        )[0])\n",
+    "    return events, coords\n",
+    "\n",
+    "def get_stances(contacts, lifts):\n",
+    "    stances = []\n",
+    "    for contacts_, lifts_ in zip(contacts, lifts):\n",
+    "        temp = set()\n",
+    "        for c1, c2 in zip(contacts_[:-1], contacts_[1:]):  # Individual strides\n",
+    "            lift = lifts_[(lifts_ > c1) & (lifts_ < c2)]\n",
+    "            if not lift.size:\n",
+    "                continue\n",
+    "            temp.add((c1, lift[0]))\n",
+    "        for l1, l2 in zip(lifts_[:-1], lifts_[1:]):\n",
+    "            contact = contacts_[(contacts_ > l1) & (contacts_ < l2)]\n",
+    "            if not contact.size:\n",
+    "                continue\n",
+    "            temp.add((contact[0], l2))\n",
+    "        stances.append(list(temp))\n",
+    "    return stances\n",
+    "\n",
+    "def _make_line_collection(coords, inds_stance, links, start=0, end=-1, color_stance='plum', alpha=0.5):\n",
+    "    mask_stance = np.zeros(coords.shape[0], dtype=bool)\n",
+    "    for inds in inds_stance:\n",
+    "        mask_stance[inds[0]:inds[1] + 1] = True\n",
+    "    color = mcolors.to_rgb('gray')\n",
+    "    colors = np.array([color] * len(coords))\n",
+    "    colors[mask_stance] = mcolors.to_rgb(color_stance)\n",
+    "    sl = slice(start, end)\n",
+    "    colors = colors[sl]\n",
+    "    segs = coords[sl, links].reshape((-1, 2, 2))\n",
+    "    colors = np.repeat(colors, len(links), axis=0)\n",
+    "    coll = LineCollection(segs, colors=colors, alpha=alpha)\n",
+    "    return coll, segs\n",
+    "\n",
+    "with open('../data/Figure4/keypoints.yaml') as f:\n",
+    "    cfg = YAML().load(f)\n",
+    "    keypoints = list(cfg['all_joints_names'])\n",
+    "\n",
+    "hooves_gt = 'Offfrontfoot', 'Offhindfoot'\n",
+    "ref_kpt_name_gt = 'Wither'\n",
+    "hooves = 'front_right_paw', 'back_right_paw'\n",
+    "ref_kpt_name = 'back_base'\n",
+    "front_limb_gt = [\n",
+    "    ('Offfrontfoot', 'Offfrontfetlock'),\n",
+    "    ('Offknee', 'Offfrontfetlock'),\n",
+    "    ('Offknee', 'Elbow'),\n",
+    "    ('Shoulder', 'Elbow'),\n",
+    "    ('Shoulder', 'Midshoulder'),\n",
+    "    ('Wither', 'Midshoulder'),\n",
+    "]\n",
+    "hind_limb_gt = [\n",
+    "    ('Offhindfoot', 'Offhindfetlock'),\n",
+    "    ('Offhindhock', 'Offhindfetlock'),\n",
+    "    ('Offhindhock', 'Stifle'),\n",
+    "    ('Ischium', 'Stifle'),\n",
+    "    ('Ischium', 'Hip'),\n",
+    "]\n",
+    "front_limb = [\n",
+    "    ('front_right_paw', 'front_right_knee'),\n",
+    "    ('front_right_thai', 'front_right_knee'),\n",
+    "    ('front_right_thai', 'neck_base'),\n",
+    "    ('back_base', 'neck_base'),\n",
+    "]\n",
+    "hind_limb = [\n",
+    "    ('back_right_paw', 'back_right_knee'),\n",
+    "    ('back_right_thai', 'back_right_knee'),\n",
+    "    ('back_right_thai', 'tail_base'),\n",
+    "]\n",
+    "\n",
+    "# Load SA predictions and GT\n",
+    "df, coords = load_json('../data/Figure4/Brownhorseoutofshadow.mp4.json')\n",
+    "df_gt = pd.read_hdf('../data/Figure4/CollectedData_Byron.h5')\n",
+    "keypoints_gt = list(df_gt.columns.get_level_values('bodyparts').unique())\n",
+    "links_front_limb_gt = [tuple(keypoints_gt.index(pt) for pt in pts) for pts in front_limb_gt]\n",
+    "links_hind_limb_gt = [tuple(keypoints_gt.index(pt) for pt in pts) for pts in hind_limb_gt]\n",
+    "links_front_limb = [tuple(keypoints.index(pt) for pt in pts) for pts in front_limb]\n",
+    "links_hind_limb = [tuple(keypoints.index(pt) for pt in pts) for pts in hind_limb]\n",
+    "\n",
+    "# Apply a zero-phase, low-pass Butterworth filter to smooth the data\n",
+    "cutoff = 3\n",
+    "b, a = signal.butter(2, cutoff, fs=24)\n",
+    "mask = df.isna()\n",
+    "df[mask] = 0\n",
+    "df[:] = signal.filtfilt(b, a, df, axis=0)\n",
+    "df[mask] = np.nan\n",
+    "sl = slice(50, -50)  # Trim the start and end of the data, when the horse is not fully seen\n",
+    "df = df.iloc[sl]\n",
+    "coords = df.to_numpy().reshape((len(df), -1, 2))\n",
+    "\n",
+    "mask = df_gt.isna()\n",
+    "df_gt[mask] = 0\n",
+    "df_gt[:] = signal.filtfilt(b, a, df_gt, axis=0)\n",
+    "df_gt[mask] = np.nan\n",
+    "df_gt = df_gt.iloc[sl]\n",
+    "coords_gt = df_gt.to_numpy().reshape((df_gt.shape[0], -1, 2))\n",
+    "\n",
+    "# Get hoof contacts and lifts\n",
+    "contacts, _ = get_events(df, 'contact', hooves, ref_kpt_name)\n",
+    "lifts, _ = get_events(df, 'lift', hooves, ref_kpt_name)\n",
+    "stances = get_stances(contacts, lifts)\n",
+    "\n",
+    "contacts_gt, _ = get_events(df_gt, 'contact', hooves_gt, ref_kpt_name_gt)\n",
+    "lifts_gt, _ = get_events(df_gt, 'lift', hooves_gt, ref_kpt_name_gt)\n",
+    "stances_gt = get_stances(contacts_gt, lifts_gt)\n",
+    "\n",
+    "s, e = 35, 35\n",
+    "coll_gt, segs_gt = _make_line_collection(coords_gt, stances_gt[0], links_front_limb_gt, start=s, end=-e, color_stance='k')\n",
+    "coll_gt2, segs_gt2 = _make_line_collection(coords_gt, stances_gt[1], links_hind_limb_gt, start=s, end=-e, color_stance='k')\n",
+    "fig, axes = plt.subplots(nrows=2, sharex=True, sharey=True)\n",
+    "for ax in axes:\n",
+    "    sns.despine(ax=ax, left=True, bottom=True)\n",
+    "    ax.set_xticks([])\n",
+    "    ax.set_yticks([])\n",
+    "axes[0].set_aspect('equal')\n",
+    "xmin, ymin = np.nanmin(np.r_[segs_gt, segs_gt2], axis=(0, 1))\n",
+    "xmax, ymax = np.nanmax(np.r_[segs_gt, segs_gt2], axis=(0, 1))\n",
+    "axes[0].set_xlim(xmin, xmax + 10)\n",
+    "axes[0].set_ylim(ymin - 10, ymax + 10)\n",
+    "axes[0].invert_yaxis()\n",
+    "axes[0].add_collection(coll_gt)\n",
+    "axes[0].set_ylabel('Forelimb')\n",
+    "temp = coords_gt[s:-e, list(set(kpt for p in links_front_limb_gt for kpt in p))]\n",
+    "axes[0].scatter(*temp[-1].T, zorder=99, c='k')\n",
+    "axes[1].add_collection(coll_gt2)\n",
+    "axes[1].set_ylabel('Hindlimb')\n",
+    "temp = coords_gt[s:-e, list(set(kpt for p in links_hind_limb_gt for kpt in p))]\n",
+    "axes[1].scatter(*temp[-1].T, zorder=99, c='k')\n",
+    "\n",
+    "coll, segs = _make_line_collection(coords, stances[0], links_front_limb, start=s, end=-e, color_stance='k')\n",
+    "coll2, segs2 = _make_line_collection(coords, stances[1], links_hind_limb, start=s, end=-e, color_stance='k')\n",
+    "fig, axes = plt.subplots(nrows=2, sharex=True, sharey=True)\n",
+    "for ax in axes:\n",
+    "    sns.despine(ax=ax, left=True, bottom=True)\n",
+    "    ax.set_xticks([])\n",
+    "    ax.set_yticks([])\n",
+    "axes[0].set_aspect('equal')\n",
+    "axes[0].set_xlim(xmin, xmax + 10)\n",
+    "axes[0].set_ylim(ymin - 10, ymax + 10)\n",
+    "axes[0].invert_yaxis()\n",
+    "axes[0].add_collection(coll)\n",
+    "forelimb_point_colors = {\n",
+    "    'back_base': '#F3FF00',\n",
+    "    'neck_base': '#CBFF00',\n",
+    "    'front_right_thai': '#FF0032',\n",
+    "    'front_right_knee': '#FF0059',\n",
+    "    'front_right_paw': '#FF0081',\n",
+    "}\n",
+    "inds_points = [keypoints.index(kpt) for kpt in forelimb_point_colors]\n",
+    "temp = coords[s:-e, inds_points]\n",
+    "axes[0].scatter(*temp[-1].T, c=list(forelimb_point_colors.values()), zorder=99)\n",
+    "axes[0].set_ylabel('Forelimb')\n",
+    "axes[1].add_collection(coll2)\n",
+    "axes[1].set_ylabel('Hindlimb')\n",
+    "hindlimb_point_colors = {\n",
+    "    'tail_base': '#FFA500',\n",
+    "    'back_right_thai': '#8E00FF',\n",
+    "    'back_right_knee': '#8E00FF',\n",
+    "    'back_right_paw': '#8E00FF',\n",
+    "}\n",
+    "inds_points = [keypoints.index(kpt) for kpt in hindlimb_point_colors]\n",
+    "temp = coords[s:-e, inds_points]\n",
+    "axes[1].scatter(*temp[-1].T, c=list(hindlimb_point_colors.values()), zorder=99)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bf88906",
    "metadata": {},
    "outputs": [],
    "source": []
