--- a/figures/Extended_Figure5.ipynb
+++ b/figures/Extended_Figure5.ipynb
@@ -519,7 +519,7 @@
    "id": "7f20c52a",
    "metadata": {},
    "source": [
-    "## Plot the outputs of top-down SupeAnimal-TopViewMouse IID:"
+    "## Plot the outputs of top-down SupeAnimal-TopViewMouse OOD:"
    ]
   },
   {
